output enhancement - fix wrong indentation when a cell contains an error - added table style